cros: Fix hanging ShelfButton when showing two menus

This fix does not fix the root cause, but it will prevent the bug from
reproing on M-71.

Root cause fix can be tracked in the same bug.

Bug: 881886
Change-Id: I83882f9d0a5725aad660ea8a6926dd3b689ad306
Reviewed-on: https://chromium-review.googlesource.com/c/1321729
Reviewed-by: Michael Wasserman <msw@chromium.org>
Commit-Queue: Alex Newcomer <newcomer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#606080}
Former-commit-id: 000d99b6e182107fe67f368bce6cc61195eea4e6